@@ -1,0 +1,327 @@
+
+package npg_qc::Schema::Result::Generic;
+
+# Created by DBIx::Class::Schema::Loader
+# DO NOT MODIFY THE FIRST PART OF THIS FILE
+
+##no critic(RequirePodAtEnd RequirePodLinksIncludeText ProhibitMagicNumbers ProhibitEmptyQuotes)
+
+=head1 NAME
+
+npg_qc::Schema::Result::Generic
+
+=head1 DESCRIPTION
+
+Arbitrary QC metrics produced by third party pipelines or tools
+
+=cut
+
+use strict;
+use warnings;
+
+use Moose;
+use MooseX::NonMoose;
+use MooseX::MarkAsMethods autoclean => 1;
+extends 'DBIx::Class::Core';
+
+=head1 ADDITIONAL CLASSES USED
+
+=over 4
+
+=item * L<namespace::autoclean>
+
+=back
+
+=cut
+
+use namespace::autoclean;
+
+=head1 COMPONENTS LOADED
+
+=over 4
+
+=item * L<DBIx::Class::InflateColumn::DateTime>
+
+=item * L<DBIx::Class::InflateColumn::Serializer>
+
+=back
+
+=cut
+
+__PACKAGE__->load_components('InflateColumn::DateTime', 'InflateColumn::Serializer');
+
+=head1 TABLE: C<generic>
+
+=cut
+
+__PACKAGE__->table('generic');
+
+=head1 ACCESSORS
+
+=head2 id_generic
+
+  data_type: 'bigint'
+  extra: {unsigned => 1}
+  is_auto_increment: 1
+  is_nullable: 0
+
+Auto-generated primary key
+
+=head2 id_seq_composition
+
+  data_type: 'bigint'
+  extra: {unsigned => 1}
+  is_foreign_key: 1
+  is_nullable: 0
+
+A foreign key referencing the id_seq_composition column of the seq_composition table
+
+=head2 desc
+
+  data_type: 'varchar'
+  is_nullable: 0
+  size: 40
+
+Name of the portable pipeline or other tools, which generated the data
+
+=head2 doc
+
+  data_type: 'json'
+  is_nullable: 1
+
+JSON document with assorted QC data
+
+=head2 comments
+
+  data_type: 'text'
+  is_nullable: 1
+
+Run-time comments and warnings
+
+=head2 info
+
+  data_type: 'json'
+  is_nullable: 1
+
+JSON document with information on how the data were produced
+
+=cut
+
+__PACKAGE__->add_columns(
+  'id_generic',
+  {
+    data_type => 'bigint',
+    extra => { unsigned => 1 },
+    is_auto_increment => 1,
+    is_nullable => 0,
+  },
+  'id_seq_composition',
+  {
+    data_type => 'bigint',
+    extra => { unsigned => 1 },
+    is_foreign_key => 1,
+    is_nullable => 0,
+  },
+  'desc',
+  { data_type => 'varchar', is_nullable => 0, size => 40 },
+  'doc',
+  { data_type => 'json', is_nullable => 1 },
+  'comments',
+  { data_type => 'text', is_nullable => 1 },
+  'info',
+  { data_type => 'json', is_nullable => 1 },
+);
+
+=head1 PRIMARY KEY
+
+=over 4
+
+=item * L</id_generic>
+
+=back
+
+=cut
+
+__PACKAGE__->set_primary_key('id_generic');
+
+=head1 UNIQUE CONSTRAINTS
+
+=head2 C<generic_id_compos_desc_uniq>
+
+=over 4
+
+=item * L</id_seq_composition>
+
+=item * L</desc>
+
+=back
+
+=cut
+
+__PACKAGE__->add_unique_constraint('generic_id_compos_desc_uniq', ['id_seq_composition', 'desc']);
+
+=head1 RELATIONS
+
+=head2 seq_composition
+
+Type: belongs_to
+
+Related object: L<npg_qc::Schema::Result::SeqComposition>
+
+=cut
+
+__PACKAGE__->belongs_to(
+  'seq_composition',
+  'npg_qc::Schema::Result::SeqComposition',
+  { id_seq_composition => 'id_seq_composition' },
+  { is_deferrable => 1, on_delete => 'NO ACTION', on_update => 'NO ACTION' },
+);
+
+=head1 L<Moose> ROLES APPLIED
+
+=over 4
+
+=item * L<npg_qc::Schema::Composition>
+
+=item * L<npg_qc::Schema::Flators>
+
+=item * L<npg_qc::autoqc::role::result>
+
+=back
+
+=cut
+
+
+with 'npg_qc::Schema::Composition', 'npg_qc::Schema::Flators', 'npg_qc::autoqc::role::result';
+
+
+# Created by DBIx::Class::Schema::Loader v0.07049 @ 2020-06-04 17:47:12
+# DO NOT MODIFY THIS OR ANYTHING ABOVE! md5sum:6Kb01TnFLjYSjw8tRPSKYw
+
+use JSON;
+
+our $VERSION = '0';
+
+#####
+# The 'doc' and 'info' attributes of the npg_qc::autoqc::results::generic object are
+# a hash reference. The 'doc' and 'info' database columns have type JSON. We serialize
+# the data structure to a JSON string on the way into tehedatabase. We read a JSON
+# string (or NULL) from a database and return the value unaltered. 
+
+for my $col ( qw/doc info/ ) {
+  __PACKAGE__->inflate_column($col, {
+    inflate => sub { return shift; },
+    deflate => sub {
+      my $data = shift;
+      defined $data ? to_json($data) : $data;
+    },
+  });
+}
+
+sub doc_inflated {
+  my $self = shift;
+  return _inflate('doc');
+}
+
+sub info_inflated {
+  my $self = shift;
+  return _inflate('info');
+}
+
+sub _inflate {
+  my ($self, $col) = @_;
+  my $value = $self->$col;
+  if (defined $value) {
+    $value = from_json($value);
+  }
+  return $value;
+}
+
+__PACKAGE__->meta->make_immutable;
+
+1;
+
+__END__
+
+=head1 SYNOPSIS
+
+=head1 DESCRIPTION
+
+Result class definition in DBIx binding for the QC database.
+
+=head1 DIAGNOSTICS
+
+=head1 CONFIGURATION AND ENVIRONMENT
+
+=head1 SUBROUTINES/METHODS
+
+=head2 composition
+
+=head2 doc_inflated
+
+=head2 info_inflated
+
+Attribute of type npg_tracking::glossary::composition. 
+
+=head2 seq_component_compositions
+
+Type: has_many
+
+Related object: L<npg_qc::Schema::Result::SeqComponentComposition>
+
+To simplify queries, skip SeqComposition and link directly to the linking table.
+
+=head1 DEPENDENCIES
+
+=over
+
+=item strict
+
+=item warnings
+
+=item Moose
+
+=item namespace::autoclean
+
+=item MooseX::NonMoose
+
+=item MooseX::MarkAsMethods
+
+=item DBIx::Class::Core
+
+=item DBIx::Class::InflateColumn::DateTime
+
+=item DBIx::Class::InflateColumn::Serializer
+
+=item JSON
+
+=back
+
+=head1 INCOMPATIBILITIES
+
+=head1 BUGS AND LIMITATIONS
+
+=head1 AUTHOR
+
+Marina Gourtovaia E<lt>mg8@sanger.ac.ukE<gt>
+
+=head1 LICENSE AND COPYRIGHT
+
+Copyright (C) 2020 Genome Research Ltd.
+
+This file is part of NPG.
+
+NPG is free software: you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program.  If not, see <http://www.gnu.org/licenses/>.
+
+=cut
