@@ -2,6 +2,7 @@ LIST OF CHANGES FOR NPG-QC PACKAGE
 
  - npg_qc::autoqc::checks::generic and npg_qc::autoqc::results::generic -
    check and result objects for generic autoqc
+ - DBIx class for the generic result
  - a new script, npg_autoqc_generic4artic, to generate generic autoqc
    results for artic pp
 
